--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "name": "ng-nn-builder",
   "version": "0.0.0",
+  "main": "app.js",
+  "build": {
+    "appId": "com.electrontest.testapp",
+    "mac": {
+      "category": "your.app.category.type"
+    }
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --base-href ./ && electron .",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "pack": "build --dir",
+    "dist": "build",
+    "electron": "electron main.js",
+    "postinstall": "install-app-deps"
+  }, 
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
@@ -27,6 +39,7 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "electron": "^23.1.1",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
